tests/warnings/unused/very-simple.expect
---CODE---
1
---STDERR---
error: unused instance: instance is created but never invoked
  ┌─ tests/warnings/unused/very-simple.fil:7:3
  │
7 │   UnusedAdd := new Add;
  │   ^^^^^^^^^ instance defined here

error: unused parameter: parameter is defined but never used
  ┌─ tests/warnings/unused/very-simple.fil:4:7
  │
4 │   let UNUSED_PARAM = 42;
  │       ^^^^^^^^^^^^ parameter defined here

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
